--- a/DbzApp/Controllers/Home/Cell/PaginatorCollectionViewCell.xib
+++ b/DbzApp/Controllers/Home/Cell/PaginatorCollectionViewCell.xib
@@ -1,21 +1,101 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22685"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="PaginatorCollectionViewCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="PaginatorCollectionViewCell" customModule="DbzApp" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="449" height="50"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
+                <rect key="frame" x="0.0" y="0.0" width="449" height="50"/>
+                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <subviews>
+                    <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="pn0-Xv-3wG">
+                        <rect key="frame" x="343" y="5" width="90" height="40"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kGn-ac-Rpn">
+                                <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="40" id="5NW-sQ-fUB"/>
+                                    <constraint firstAttribute="height" constant="40" id="A2y-Iu-zvA"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" image="chevron.left" catalog="system" title="&lt;"/>
+                                <connections>
+                                    <action selector="actionBack:" destination="gTV-IL-0wX" eventType="touchUpInside" id="pbO-Jj-dSx"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jFh-M9-ddU">
+                                <rect key="frame" x="50" y="0.0" width="40" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="40" id="MZd-Q2-Ka7"/>
+                                    <constraint firstAttribute="height" constant="40" id="Vd8-aq-uP4"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" image="chevron.right" catalog="system" title="&gt;"/>
+                                <connections>
+                                    <action selector="actionNext:" destination="gTV-IL-0wX" eventType="touchUpInside" id="bP4-7y-68b"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                    </stackView>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="tXS-Yq-DmQ">
+                        <rect key="frame" x="16" y="5" width="128.33333333333334" height="40"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Personajes 10 de 10" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lVT-XS-nUk">
+                                <rect key="frame" x="0.0" y="0.0" width="128.33333333333334" height="19"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="13"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pagina 1 de 9" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3yr-Ed-tfJ">
+                                <rect key="frame" x="0.0" y="21" width="128.33333333333334" height="19"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                <color key="textColor" systemColor="systemGrayColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="40" id="wO1-nt-Wpg"/>
+                        </constraints>
+                    </stackView>
+                </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
+            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <constraints>
+                <constraint firstItem="tXS-Yq-DmQ" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="16" id="3Du-hV-gse"/>
+                <constraint firstItem="tXS-Yq-DmQ" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="5" id="5lI-fE-sYj"/>
+                <constraint firstAttribute="bottom" secondItem="tXS-Yq-DmQ" secondAttribute="bottom" constant="5" id="IDj-TS-icb"/>
+                <constraint firstItem="pn0-Xv-3wG" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="5" id="KHb-St-xsQ"/>
+                <constraint firstAttribute="trailing" secondItem="pn0-Xv-3wG" secondAttribute="trailing" constant="16" id="Wsn-vc-BeF"/>
+                <constraint firstAttribute="bottom" secondItem="pn0-Xv-3wG" secondAttribute="bottom" constant="5" id="fL7-kl-Ovh"/>
+            </constraints>
+            <size key="customSize" width="449" height="50"/>
+            <connections>
+                <outlet property="buttonBack" destination="kGn-ac-Rpn" id="K2x-ef-mQx"/>
+                <outlet property="buttonNext" destination="jFh-M9-ddU" id="GQf-GD-qKT"/>
+                <outlet property="labelNumCharacters" destination="lVT-XS-nUk" id="48P-D1-Ue1"/>
+                <outlet property="labelNumPages" destination="3yr-Ed-tfJ" id="tdl-Bx-kzh"/>
+            </connections>
+            <point key="canvasLocation" x="434.35114503816794" y="-12.67605633802817"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <image name="chevron.left" catalog="system" width="97" height="128"/>
+        <image name="chevron.right" catalog="system" width="97" height="128"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGrayColor">
+            <color red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
