--- a/DbzApp/Controllers/Home/Detail/Cells/PaginationTableViewCell.xib
+++ b/DbzApp/Controllers/Home/Detail/Cells/PaginationTableViewCell.xib
@@ -17,12 +17,6 @@
                 <rect key="frame" x="0.0" y="0.0" width="342" height="50"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Personajes 10 de 20" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b8h-aj-dX1">
-                        <rect key="frame" x="16" y="14.000000000000002" width="130" height="21.666666666666671"/>
-                        <fontDescription key="fontDescription" type="boldSystem" pointSize="13"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                     <stackView opaque="NO" contentMode="scaleToFill" spacing="11" translatesAutoresizingMaskIntoConstraints="NO" id="1Bp-Z2-BwY">
                         <rect key="frame" x="235" y="5" width="91" height="40"/>
                         <subviews>
@@ -33,7 +27,7 @@
                                     <constraint firstAttribute="width" constant="40" id="nJp-ML-AiA"/>
                                 </constraints>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="filled" title="-"/>
+                                <buttonConfiguration key="configuration" style="filled" image="chevron.left" catalog="system" title="-"/>
                                 <connections>
                                     <action selector="actionBack:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="xfb-ic-ljb"/>
                                 </connections>
@@ -46,21 +40,38 @@
                                 </constraints>
                                 <color key="tintColor" systemColor="labelColor"/>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="filled" title="+"/>
+                                <buttonConfiguration key="configuration" style="filled" image="chevron.right" catalog="system" title="+"/>
                                 <connections>
                                     <action selector="actionNext:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="lUa-QN-Ync"/>
                                 </connections>
                             </button>
                         </subviews>
                     </stackView>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="Kjk-t5-XAq">
+                        <rect key="frame" x="16" y="7" width="130" height="35.666666666666664"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Personajes 10 de 20" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b8h-aj-dX1">
+                                <rect key="frame" x="0.0" y="0.0" width="130" height="17"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="13"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pagina 1 de 10" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kb0-Dm-SOp">
+                                <rect key="frame" x="0.0" y="19" width="130" height="16.666666666666671"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <color key="textColor" systemColor="systemGrayColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                    </stackView>
                 </subviews>
                 <constraints>
                     <constraint firstItem="1Bp-Z2-BwY" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="0KG-yD-2Hr"/>
-                    <constraint firstAttribute="bottom" secondItem="b8h-aj-dX1" secondAttribute="bottom" constant="14" id="C4m-bW-Fh0"/>
+                    <constraint firstAttribute="bottom" secondItem="Kjk-t5-XAq" secondAttribute="bottom" constant="7" id="8Vm-Oc-npE"/>
                     <constraint firstAttribute="bottom" secondItem="1Bp-Z2-BwY" secondAttribute="bottom" constant="4.6699999999999999" id="EYd-NJ-9RH"/>
-                    <constraint firstItem="b8h-aj-dX1" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="14" id="dEo-0w-R1d"/>
+                    <constraint firstItem="Kjk-t5-XAq" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="7" id="QtK-yu-fEr"/>
+                    <constraint firstItem="Kjk-t5-XAq" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="jHo-nl-nDZ"/>
                     <constraint firstAttribute="trailing" secondItem="1Bp-Z2-BwY" secondAttribute="trailing" constant="16" id="qfe-RN-fRf"/>
-                    <constraint firstItem="b8h-aj-dX1" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="rve-3q-t8b"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -68,13 +79,19 @@
                 <outlet property="buttonBack" destination="nBe-Df-Grj" id="XYv-7M-ETx"/>
                 <outlet property="buttonNext" destination="cGF-Jy-tEd" id="z9I-Qv-VSj"/>
                 <outlet property="labelNumCharacters" destination="b8h-aj-dX1" id="riU-kQ-MRi"/>
+                <outlet property="labelNumPage" destination="Kb0-Dm-SOp" id="EJh-db-hw8"/>
             </connections>
             <point key="canvasLocation" x="146.56488549618319" y="-12.67605633802817"/>
         </tableViewCell>
     </objects>
     <resources>
+        <image name="chevron.left" catalog="system" width="97" height="128"/>
+        <image name="chevron.right" catalog="system" width="97" height="128"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGrayColor">
+            <color red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
