--- a/DbzApp/Controllers/DetailPlanet/cell/CharacterPlanetTableViewCell.xib
+++ b/DbzApp/Controllers/DetailPlanet/cell/CharacterPlanetTableViewCell.xib
@@ -17,15 +17,6 @@
                 <rect key="frame" x="0.0" y="0.0" width="425" height="372"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Habitantes registrados" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H1A-4G-Ob5">
-                        <rect key="frame" x="16" y="17" width="173" height="21"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="173" id="71g-mD-2zA"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="4Tm-9k-i4l">
                         <rect key="frame" x="0.0" y="48" width="425" height="324"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -36,23 +27,31 @@
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                     </collectionView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="40" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4HX-Ea-Z3O">
-                        <rect key="frame" x="197" y="17" width="21" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="6bG-Fx-Yfh">
+                        <rect key="frame" x="16" y="12.999999999999998" width="204" height="20.333333333333329"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Habitantes registrados" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H1A-4G-Ob5">
+                                <rect key="frame" x="0.0" y="0.0" width="173" height="20.333333333333332"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="40" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4HX-Ea-Z3O">
+                                <rect key="frame" x="183" y="0.0" width="21" height="20.333333333333332"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                    </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="4Tm-9k-i4l" firstAttribute="top" secondItem="H1A-4G-Ob5" secondAttribute="bottom" constant="10" id="AEF-Ja-WbF"/>
                     <constraint firstItem="4Tm-9k-i4l" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Df3-Vq-5uq"/>
-                    <constraint firstItem="H1A-4G-Ob5" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="17" id="Dvc-MR-us3"/>
                     <constraint firstAttribute="bottom" secondItem="4Tm-9k-i4l" secondAttribute="bottom" id="Nfb-YN-6aa"/>
-                    <constraint firstItem="4HX-Ea-Z3O" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="17" id="Nw8-jN-UQt"/>
-                    <constraint firstItem="H1A-4G-Ob5" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="dZj-5K-9Ls"/>
-                    <constraint firstItem="4HX-Ea-Z3O" firstAttribute="leading" secondItem="H1A-4G-Ob5" secondAttribute="trailing" constant="8" symbolic="YES" id="ha1-b4-Ejn"/>
+                    <constraint firstItem="6bG-Fx-Yfh" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="cIE-xj-pqd"/>
+                    <constraint firstItem="6bG-Fx-Yfh" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="13" id="dcW-Ct-aNr"/>
+                    <constraint firstItem="4Tm-9k-i4l" firstAttribute="top" secondItem="6bG-Fx-Yfh" secondAttribute="bottom" constant="14.67" id="lxb-Qi-s9h"/>
                     <constraint firstAttribute="trailing" secondItem="4Tm-9k-i4l" secondAttribute="trailing" id="mfv-2u-d34"/>
-                    <constraint firstItem="4Tm-9k-i4l" firstAttribute="top" secondItem="4HX-Ea-Z3O" secondAttribute="bottom" constant="10" id="sDS-dp-H8H"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
